[package]
name = "subxt-examples"
version = "0.28.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Subxt example usage"

[dev-dependencies]
subxt = { path = "../subxt" }
tokio = { version = "1.27", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3.27"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"
sp-core = { git = "https://github.com/duniter/substrate", branch = "duniter-substrate-v0.9.42", package = "sp-core", default-features = false  }
sp-runtime = { git = "https://github.com/duniter/substrate", branch = "duniter-substrate-v0.9.42", package = "sp-runtime" }
sp-keyring = { git = "https://github.com/duniter/substrate/", branch = "duniter-substrate-v0.9.42" }
sp-version = { git = "https://github.com/duniter/substrate/", branch = "duniter-substrate-v0.9.42" }
