[package]
name = "integration-tests"
version = "0.28.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
description = "Subxt integration tests that rely on the Substrate binary"

[features]
default = ["subxt/integration-tests"]

[dev-dependencies]
assert_matches = "1.5.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
frame-metadata = "15.0.0"
futures = "0.3.27"
hex = "0.4.3"
regex = "1.7.3"
scale-info = { version = "2.5.0", features = ["bit-vec"] }
sp-core = { git = "https://github.com/duniter/substrate", branch = "duniter-substrate-v0.9.42", package = "sp-core", default-features = false  }
sp-runtime = { git = "https://github.com/duniter/substrate", branch = "duniter-substrate-v0.9.42", package = "sp-runtime" }
sp-keyring = { git = "https://github.com/duniter/substrate/", branch = "duniter-substrate-v0.9.42" }
syn = "1.0.109"
subxt = { version = "0.28.0", path = "../../subxt" }
subxt-codegen = { version = "0.28.0", path = "../../codegen" }
test-runtime = { path = "../test-runtime" }
tokio = { version = "1.27", features = ["macros", "time"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
wabt = "0.10.0"
which = "4.4.0"
