[package]
name = "test-runtime"
version = "0.24.0"
edition = "2021"

[dependencies]
subxt = { path = "../../subxt" }
sp-runtime = { git = "https://github.com/duniter/substrate/", branch = "duniter-substrate-v0.9.32" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }

[build-dependencies]
subxt = { path = "../../subxt" }
sp-core = { git = "https://github.com/duniter/substrate/", branch = "duniter-substrate-v0.9.32" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
which = "4.2.2"
jsonrpsee = { version = "0.16.0", features = ["async-client", "client-ws-transport"] }
